--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ ksp = "2.0.21-1.0.27"
 navigationCompose = "2.9.1"
 datastore = "1.0.0"
 material-icons = "1.7.8"
+foundation = "1.8.2"
+foundationLayout = "1.8.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
