--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".features.main.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustNothing"
             android:label="@string/app_name"
             android:theme="@style/Theme.ChatGuard">
             <intent-filter>
